--- a/platformio.ini
+++ b/platformio.ini
@@ -15,10 +15,12 @@
 # Remove '-fmax-errors=5' from build_flags below to see all.
 #
 
+
+
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = mega2560
+default_envs = melzi_optiboot
 
 [common]
 default_src_filter = +<src/*> -<src/config> -<src/HAL> +<src/HAL/shared>
