--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = melzi_optiboot
+default_envs = STM32F103RE_btt
 
 [common]
 default_src_filter = +<src/*> -<src/config> -<src/HAL> +<src/HAL/shared>
@@ -303,7 +303,7 @@ extra_scripts     = buildroot/share/PlatformIO/scripts/STM32F103RC_SKR_MINI.py
 src_filter        = ${common.default_src_filter} +<src/HAL/STM32F1>
 lib_deps          = ${common.lib_deps}
   SoftwareSerialM=https://github.com/FYSETC/SoftwareSerialM/archive/master.zip
-  USBComposite for STM32F1@==0.91
+    USBComposite for STM32F1@==0.91
 lib_ignore        = Adafruit NeoPixel, SPI
 monitor_speed     = 115200
 
@@ -794,7 +794,7 @@ build_unflags  = -std=gnu++11
 src_filter     = ${common.default_src_filter} +<src/HAL/SAMD51>
 lib_deps       = ${common.lib_deps}
   SoftwareSerialM=https://github.com/FYSETC/SoftwareSerialM/archive/master.zip
-  Adafruit_SPIFlash=https://github.com/adafruit/Adafruit_SPIFlash/archive/master.zip
+  Adafruit_SPIFlash=https://github.com/adafruit/Adafruit_SPIFlash/archive/master.zip  
 debug_tool     = jlink
 
 #
